# virage-chunkers-ce

./: .gitignore  .npmrc  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  tsconfig.base.json
.cargo/: config.toml
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/config/: release-please.json
.github/workflows/: automerge-release-please.yml  build-native.yml  ci.yml  publish-manual.yml  release.yml
bench/: ast-walker.bench.ts  md-throughput.bench.ts
bench/fixtures/: large-50k.md
crates/virage-vidoc/: Cargo.toml
crates/virage-vidoc/src/: lib.rs
docs/: ROADMAP.md
docs/ai/: INDEX.md
docs/ai/guardrails/: chunker.md  release.md  rust-napi.md
scripts/: patch-lockfile-stubs.cjs
